# TEESimulator-RS

./: README.md
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  binder_interceptor.cpp  supervisor.cpp
app/src/main/cpp/inject/: main.cpp  utils.cpp
app/src/main/java/org/matrix/TEESimulator/: App.kt
app/src/main/java/org/matrix/TEESimulator/attestation/: AttestationBuilder.kt  AttestationPatcher.kt  DeviceAttestationService.kt  KeyMintAttestation.kt
app/src/main/java/org/matrix/TEESimulator/config/: BootStateManager.kt  BulletinPoller.kt
app/src/main/java/org/matrix/TEESimulator/logging/: KeyMintParameterLogger.kt  SystemLogger.kt
app/src/main/java/org/matrix/TEESimulator/pki/: CertificateGenerator.kt  NativeCertGen.kt
app/src/main/java/org/matrix/TEESimulator/util/: AndroidDeviceUtils.kt
gradle/: libs.versions.toml
module/: action.sh  action_i18n.sh  changelog.md  customize.sh  module.prop  sepolicy.rule  uninstall.sh  update.json
native-certgen/src/: certbuilder.rs
native-certgen/src/logging/: rotating.rs
scripts/: package.sh
stub/src/main/java/android/hardware/security/keymint/: BlockMode.java  PaddingMode.java
stub/src/main/java/android/os/: SystemProperties.java
stub/src/main/java/android/security/maintenance/: IKeystoreMaintenance.java
stub/src/main/java/android/system/keystore2/: CreateOperationResponse.java  Domain.java  IKeystoreOperation.java  KeyParameters.java  OperationChallenge.java
(+10 files in other folders)
